# oceanicp_decoder

./: .gitignore  Cargo.toml
src/: main.rs
src/models/: dive_sites.rs  dives.rs  file.rs  gas_definitions.rs  generator.rs  link.rs  mod.rs
src/uddf_elements/: abundance.rs  accomodation.rs  address.rs  alarm.rs  certification.rs  contact.rs  datetime.rs  diveinsurance.rs  drink.rs  ecology.rs  education.rs  equipmentitem.rs  fauna.rs  flora.rs  gasdefinitions.rs  instructor.rs  issuedate.rs  link.rs  manufacturer.rs  mixchange.rs  mod.rs  model.rs  nextservicedate.rs  notes.rs  objectname.rs  observations.rs  operator.rs  output.rs  owner.rs  periodicallytaken.rs  personal.rs  price.rs  purchase.rs  rating.rs  serialnumber.rs  serviceinterval.rs  sex.rs  shop.rs  species.rs  timespanberforedive.rs  (+1 more)
